2012-08-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/dumpdata.h: Remove the swap_items() prototype.
	* luatex.c (swap_items): Moved from here ...
	* tex/texfileio.w (swap_items): ... to here and declared static.

2012-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.[ch] [W32TeX]: Use DLLPROC for luatex.dll.
	* pdf/pdfgen.w [WIN32]: Convert file names '\\' -> '/'.

2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/texdeffont.w (tex_def_font): Better tracing of font
	definitions, adapted from e-TeX version 2.5.

2012-07-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdf/pdfpage.w (print_pdffloat): Cope with broken snprintf().
	* lua/luastuff.w (luatex_error): Drop snprintf() return value.

2012-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luainit.w (lua_initialize): Avoid using asprintf().
	* utils/utils.w (initversionstring): Avoid using asprintf().

	One and only one prototype per function.
	* image/epdf.h, utils/utils.h: Add #include "luatex-common.h"
	and move pdftex_{fail,warn} prototypes from here ...
	* luatex-common.h (new): ... to here.
	* am/libluatex.am (libluatex_a_SOURCES): Add the new file.

2012-07-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/loslibext.c os_gettimeofday): Use int64_t (from W32TeX).

2012-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/pdftoepdf.cc (get_file_checksum): Use uint64_t and PRIu64.
	* image/writejp2.w, lua/loslibext.c: Use uint64_t.

2012-07-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/texfileio.w (runpopen): Sync with ../lib/texmfmp.c.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/writejbig2.w: Use LONGINTEGER_PRI, not LONGINTEGER_PRId.
	* pdf/pdfgen.w: Use LONGINTEGER_PRI, not LONGINTEGER_PRIi.

2012-07-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils/utils.w: Use EXIT_FAILURE instead of EX_SOFTWARE.

2012-07-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdf/pdfgen.w: Cast xfseeko() arg2 to avoid MSVC warning.
